# Rendering-NJU-GaborNoise

./: .gitignore  README.md
BlueNoiseSampling/: README.md
BlueNoiseSampling/include/: display.h  point.h
BlueNoiseSampling/src/: display.cpp  poissondisk.cpp
GaborNoise/: CMakeLists.txt  GaborNoise.pro  运行说明.md
GaborNoise/scene/irawan/: twill_cloud.xml  twill_stripe.xml
GaborNoise/scene/matpreview/: mat_aniso.xml  mat_fire.xml  mat_stripe.xml
GaborNoise/src/: gaborkernel.h  gabornoise.h  gaborutil.h  mainwidget.h
scene/irawan/: twill_fire.xml  twill_gabor_aniso.xml  twill_gabor_iso.xml
scene/matpreview/: mat_cloud.xml  mat_iso.xml
src/: main.cpp  mainwidget.cpp  mainwidget.ui  qtutil.h
作业4_蓝噪采样/: CMakeLists.txt  README.md
作业4_蓝噪采样/include/: poissondisk.h
作业4_蓝噪采样/src/: main.cpp
